--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "build-storybook": "build-storybook"
   },
   "dependencies": {
+    "aos": "^2.3.4",
     "next": "11.1.2",
     "react": "17.0.2",
     "react-dom": "17.0.2"
@@ -21,6 +22,7 @@
     "@storybook/addon-essentials": "^6.3.9",
     "@storybook/addon-links": "^6.3.9",
     "@storybook/react": "^6.3.9",
+    "@types/aos": "^3.0.4",
     "@types/react": "17.0.26",
     "babel-loader": "^8.2.2",
     "eslint": "7.32.0",
