--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,6 +14,6 @@
     "isolatedModules": true,
     "jsx": "preserve"
   },
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", "pages/_document.tsx"],
+  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", "pages/_document.tsx", "components/index.ts", "components/molekul/index.ts"],
   "exclude": ["node_modules"]
 }
